--- a/src/components/layout-header.module.scss
+++ b/src/components/layout-header.module.scss
@@ -47,13 +47,13 @@ $without-sidebar: '(max-width: 991px)';
   text-transform: capitalize;
 
   @media #{$with-sidebar} {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   @media #{$without-sidebar} {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
