remove nowruz logo and confetti

--- a/src/components/layout-header.module.scss
+++ b/src/components/layout-header.module.scss
@@ -36,31 +36,11 @@ $without-sidebar: '(max-width: 991px)';
   }
 }
 
-.nowruz {
-  margin-bottom: 10px;
-  margin-top: -25px;
-  background: linear-gradient(to right, #d43e1b 0, #f9b616 100pt);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  font-size: 10pt;
-  width: 250px;
-  text-transform: capitalize;
-
-  @media #{$with-sidebar} {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  @media #{$without-sidebar} {
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-
 .logo {
   flex: 1;
   margin: 0;
   white-space: nowrap;
+  font-size: 36px; // fluid's fallback size
   font-size: fluid(28, 320, 36, 600);
 }
 
