--- a/styles/helvetica/header.scss
+++ b/styles/helvetica/header.scss
@@ -67,18 +67,36 @@
   }
 }
 
-.mobile-shortcuts {
-  margin: 0 15px rem(20px) calc(15px - 1em);
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  max-width: rem(450px);
-}
+.mobile-navbar {
+  background-color: #edf1f5;
+  position: fixed;
+  bottom: 0;
+  max-width: 750px;
+  width: 100%;
+  z-index: 100;
+  height: 50px;
+  transition: transform 0.3s ease-in-out;
+  transform: translateY(0%);
 
-.mobile-shortcut-link {
-  margin-left: 1em;
-  margin-bottom: 0.5em;
-  white-space: nowrap;
+  .mobile-navbar-row {
+    float: left;
+    width: 25%;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    font-size: rem(24px);
+
+    sup {
+      font-size: 12px;
+    }
+
+    a:link,
+    a:visited,
+    a:hover {
+      color: #101010;
+      text-decoration: none;
+    }
+  }
 }
 
 .signin-link {
