--- a/styles/helvetica/sidebar.scss
+++ b/styles/helvetica/sidebar.scss
@@ -1,6 +1,13 @@
 @import 'dark-vars.scss';
 
 .sidebar {
+  position: fixed;
+  top: 0;
+  right: 5%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 100;
+
   a {
     color: #000;
   }
@@ -49,6 +56,21 @@
     &::after {
       content: ')';
     }
+  }
+
+  .sidebar__content {
+    position: absolute;
+    height: 100%;
+    width: 250px;
+    padding: rem(20px) rem(15px);
+    overflow: hidden;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .sidebar__content::-webkit-scrollbar {
+    display: none;
   }
 }
 
@@ -151,4 +173,64 @@
 .body--no-select {
   -webkit-user-select: none;
   user-select: none;
+}
+
+#theme-box {
+  padding: 3px;
+  border: #000 solid 2px;
+  border-radius: 50px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  outline: rgba(255, 255, 255, 0.5) solid 2px;
+  height: 40px;
+
+  .dark-theme & {
+    box-shadow: 0 2px 6px rgba(255, 255, 255, 0.2);
+    outline: rgba(0, 0, 0, 0.5) solid 2px;
+    border-color: $link-color;
+  }
+}
+
+.theme-row {
+  display: inline-block;
+  width: calc(100% / 3);
+  height: 30px;
+  line-height: 30px;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s linear;
+}
+
+.theme-row:first-child {
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
+
+.theme-row:last-child {
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.theme-selected {
+  background-color: #000;
+  color: white;
+
+  .dark-theme & {
+    background-color: $link-color;
+    color: #fff;
+  }
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.5; /* optional */
+}
+
+@keyframes highlight {
+  from {
+    background-color: inherit;
+  }
+
+  to {
+    background-color: transparent;
+  }
 }
